[package]
name = "ftc_toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6.0.0"
freya = "0.3.4"
from_variants = "1.0.2"
regex = "1.12.1"
reqwest = { version = "0.12.24", features = ["blocking"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zip = "6.0.0"
