[package]
name = "ftc_toolbox"
version = "0.1.0"
edition = "2024"

[dependencies]
async_zip = { version = "0.0.18", features = ["full", "tokio"] }
directories = "6.0.0"
freya = "0.3.4"
from_variants = "1.0.2"
regex = "1.12.1"
reqwest = { version = "0.12.24" }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros", "process", "fs", "io-std"] }
tokio-util = { version = "0.7.16", features = ["compat"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
